assets/css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";

// Our variables
$base-font-family: Helvetica, Arial, sans-serif;
$base-font-size:   16px;
$base-font-weight: 400;
$small-font-size:  $base-font-size * 0.875;
$base-line-height: 1.5;

$spacing-unit:     30px;

$text-color:       #1f2421;
$background-color: #fdfdfd; //#ffffff ?
$brand-color:      #da3124;

// Width of the content area
$content-width:    1200px;

$on-palm:          600px;
$on-laptop:        800px;

// Navbar
$height-navbar:    65px;

// Use media queries like this:
// @include media-query($on-palm) {
//     .wrapper {
//         padding-right: $spacing-unit / 2;
//         padding-left: $spacing-unit / 2;
//     }
// }
@mixin media-query($device) {
    @media screen and (max-width: $device) {
        @content;
    }
}



// Import partials from `sass_dir` (defaults to `_sass`)
@import
        "fonts",
        "base",
        "layout"
;

header {
    padding: 0px !important;
}

.wrapper-content {
    margin-top: 100px;
}

.brand-color {
    color: $brand-color;
}

.background-color {
    color: $background-color;
}

nav {
    height: $height-navbar;
    width: 100%;
    padding: 0px !important;

    .col {
        height: 100%;
        padding: 0px;
    }

    .navbar-nav {
        height: $height-navbar;
        padding: 0px !important;

        .logo {
            $border: 1px;

            width: auto;
            height: 50px;
            transform: translate(0px, 40px) scale(3.2);
            display: block;
            margin-left: auto;
            margin-right: auto;
            padding: 0px !important;
            border: solid 1px transparent;
            border-radius: 50%;
            background-image: linear-gradient(#f8f9fa, #f8f9fa),
                            linear-gradient(to bottom, transparent 48.75%, $brand-color 48.75%);
            background-origin: border-box;
            background-clip: content-box, border-box;
        }

        a {
            display: flex;
            justify-content: center;
            align-items: center;
        }

        @media(min-width:992px) {
            a {
                border-bottom: solid $brand-color;
            }
        }
    }

    .navbar-brand {
        .logo {
            width: auto;
            height: 50px;
            transform: scale(1.5);
        }
    }

}

.main-title-social {
    font-size: 80px;
    font-family: BadScript;
}

.secondary-title-social {
    font-size: 60px;
    font-family: BebasNeue Bold;
    font-weight: bold;
}

.instagram-block {
    background-color: $text-color;
    line-height: 1;
    padding: 10px;
    padding-top: 15%;
}

.facebook-block {
    line-height: 1;
    padding: 10px;
    color: $text-color;
}

.volant-img {
    height: 50px;
}

.insta-shuttle {
    margin-top: -40px;
}

.facebook-shuttle {
    margin-top: -20px;
}

.page-header {
    background-color: $brand-color;
    height: 10rem;
    @media(min-width:992px) {
        .page-title {
            height: 20rem;
            font-size: 80px;
        }

        > div {
            padding-top: 10rem;
        }
        height: 20rem;
    }

    > div {
        padding-top: 5.5rem;
    }

    .page-title {
        height: 5rem;
        font-size: 40px;
        font-family:'BebasNeue Bold';
        font-weight: bold;
        color: #fdfdfd;
        padding: 0 5%;
    }
    .rotate-minus-90 {
        transform: rotate(-90deg);
    }
}

